Linked angular controller and service.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="devMtnApp">
 
-<head>
-	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>DevMtin</title>
-    <link rel="stylesheet" href="styles/main.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <title>DevMtin</title>
+        <link rel="stylesheet" href="styles/main.css">
+    </head>
 
-    <body>
+    <body ng-controller="devMtnController">
 
         <div id="header-container">
 
@@ -61,6 +61,8 @@
 
         
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-        <script src=""></script>
+        <script src="js/app.js"></script>
+        <script src="js/controller.js"></script>
+        <script src="js/service.js"></script>
     </body>
 </html>
